[package]
edition = "2021"
name = "noodle_grid"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bytemuck = "1.14"
capnp = "0.19"
clap = {version = "4", features = ["derive", "cargo"]}
colabrodo_common = {git = 'https://github.com/InsightCenterNoodles/colabrodo', rev = "bcc8ac460b78b79590aec47879ebbb44cbcbc7b5"}
colabrodo_server = {git = 'https://github.com/InsightCenterNoodles/colabrodo', rev = "bcc8ac460b78b79590aec47879ebbb44cbcbc7b5"}
env_logger = "0.11"
gltf = "1"
hostname = "0.4.0"
image = "*"
imageproc = "*"
itertools = "0.13.0"
local-ip-address = "0.6"
log = "0.4"
mdns-sd = "0.11"
nalgebra = "0.32"
nalgebra-glm = "0.18"
num-traits = "0.2"
plotters = "0.3.7"
url = "2.4"
